style: timeline seam fix, galéria kártya stretch

--- a/src/pages/Gallery/Gallery.scss
+++ b/src/pages/Gallery/Gallery.scss
@@ -24,7 +24,7 @@ $highlightcolor: #4BB984;
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-evenly;
-        align-items: center;
+        align-items: stretch;
     }
 
     .HeadlineDescription {
